# trading-ml

./: .gitignore  .ocamlformat  .ocamlformat-ignore  README.md  dune-project  trading.opam
account/lib/application/commands/: commit_fill_command.ml  commit_fill_command.mli  dune  release_command.ml  release_command.mli  reserve_command.ml  reserve_command.mli  reserve_command_workflow.ml
account/lib/application/view_models/: dune  instrument_view_model.mli  portfolio_view_model.ml  portfolio_view_model.mli  position_view_model.ml  position_view_model.mli  reservation_view_model.ml  reservation_view_model.mli
broker/lib/: dune  factory.ml  factory.mli
broker/lib/application/commands/: cancel_pending_order_command_handler.ml  cancel_pending_order_command_handler.mli  dune  submit_order_command.ml  submit_order_command.mli  submit_order_command_handler.ml  submit_order_command_handler.mli  submit_order_command_workflow.ml  submit_order_command_workflow.mli  submit_order_handler.ml  submit_order_handler.mli  unwatch_public_trades_command.mli  unwatch_public_trades_command_handler.ml  unwatch_public_trades_command_handler.mli  unwatch_public_trades_command_workflow.ml  unwatch_public_trades_command_workflow.mli  watch_public_trades_command.mli  watch_public_trades_command_handler.ml  watch_public_trades_command_handler.mli  watch_public_trades_command_workflow.ml  watch_public_trades_command_workflow.mli
broker/lib/application/domain_event_handlers/: publish_integration_event_on_bar_updated.ml  publish_integration_event_on_bar_updated.mli  publish_integration_event_on_public_trade_printed.ml  publish_integration_event_on_public_trade_printed.mli
broker/lib/application/integration_events/: bar_updated_integration_event.ml  bar_updated_integration_event.mli  dune  order_accepted_integration_event.ml  order_accepted_integration_event.mli  order_event.ml  order_event.mli  order_filled_integration_event.mli  order_rejected_integration_event.ml  order_rejected_integration_event.mli  order_unreachable_integration_event.mli  public_trade_printed_integration_event.ml  public_trade_printed_integration_event.mli  trade_printed_integration_event.ml  trade_printed_integration_event.mli
broker/lib/application/ports/: broker.ml  dune
broker/lib/application/queries/: dune
broker/lib/application/store/: dune  order_command_log.mli
broker/lib/application/view_models/: candle_view_model.ml  candle_view_model.mli  dune  execution_view_model.ml  execution_view_model.mli  instrument_view_model.mli  order_kind_view_model.ml  order_kind_view_model.mli  order_view_model.ml  order_view_model.mli  trade_view_model.ml  trade_view_model.mli
broker/lib/domain/: dune
broker/lib/domain/order/: order.ml
broker/lib/infrastructure/persistence/: dune  in_memory_order_command_log.ml  in_memory_order_command_log.mli
broker/lib/infrastructure/websocket/: resilient.ml  resilient.mli
execution_management/lib/application/commands/: cancel_order_ticket_command.mli  dune  open_order_ticket_command.ml  open_order_ticket_command.mli  open_order_ticket_command_handler.ml  open_order_ticket_command_handler.mli
execution_management/lib/application/integration_events/: dune  kill_switch_tripped_integration_event.mli  order_ticket_cancelled_integration_event.ml  order_ticket_cancelled_integration_event.mli  order_ticket_completed_integration_event.ml  order_ticket_completed_integration_event.mli  order_ticket_failed_integration_event.ml  order_ticket_failed_integration_event.mli  order_ticket_fill_recorded_integration_event.ml  order_ticket_fill_recorded_integration_event.mli  order_ticket_opened_integration_event.ml  order_ticket_opened_integration_event.mli  trade_submission_blocked_integration_event.ml  trade_submission_blocked_integration_event.mli
execution_management/lib/application/queries/: dune  get_order_ticket_query.ml  get_order_ticket_query.mli  get_order_ticket_query_handler.ml  get_order_ticket_query_handler.mli  list_open_order_tickets_query.ml  list_open_order_tickets_query.mli  list_open_order_tickets_query_handler.ml  list_open_order_tickets_query_handler.mli
execution_management/lib/application/view_models/: dune  execution_directive_view_model.ml  execution_directive_view_model.mli  instrument_view_model.ml  instrument_view_model.mli  order_ticket_view_model.ml  order_ticket_view_model.mli  placement_view_model.ml  placement_view_model.mli  progress_view_model.ml  progress_view_model.mli  strategy_status_view_model.ml  strategy_status_view_model.mli
execution_management/test/component/: dune  execution_management_component_runner.ml  open_order_ticket_saga_test.ml  order_ticket_cancel_test.ml  order_ticket_harness.ml  place_order_saga_test.ml  test_harness.ml
execution_management/test/unit/: dune  execution_management_unit_runner.ml  open_order_ticket_process_test.ml
execution_management/test/unit/order_ticket/: order_ticket_test.ml
execution_management/test/unit/wire_contracts/: execution_directive_parse_test.ml  order_ticket_opened_integration_event_test.ml  order_ticket_view_model_test.ml  queries_test.ml
lib/domain/core/: board.ml  board.mli  candle_json.ml  dune  instrument.ml  instrument.mli  isin.ml  isin.mli  mic.ml  mic.mli  side.ml  side.mli  ticker.ml  ticker.mli  timeframe.ml  timeframe.mli
lib/domain/engine/: backtest.ml  dune  portfolio.ml  portfolio.mli  step.ml  step.mli
order_management/lib/: dune  factory.ml  factory.mli
order_management/lib/application/process_managers/: dune  order_process_manager.ml  order_process_manager.mli
paper_broker/lib/application/commands/: apply_bar_command.ml  apply_bar_command.mli  apply_bar_command_handler.ml  apply_bar_command_handler.mli  apply_bar_command_workflow.ml  apply_bar_command_workflow.mli  cancel_pending_order_command.mli  dune  submit_order_command.ml  (+9 more)
shared/config/: dune  loader.ml  loader.mli  merger.ml  merger.mli  trading_config.ml  trading_config.mli
shared/config/test/: dune  trading_config_test.ml
shared/lib/correlation_id/: correlation_id.ml  correlation_id.mli  correlation_id.mlw  dune
(+812 files in other folders)
