(library
 (name broker_factory)
 (public_name trading.broker.factory)
 (modules factory)
 (libraries
  bus
  core
  decimal
  broker
  broker_commands
  broker_integration_events
  broker_inbound_http
  broker_store
  broker_persistence
  finam
  bcs
  inbound_http
  server
  log
  eio
  eio.unix
  yojson
  ppx_yojson_conv_lib))
