(test
 (name execution_management_component_runner)
 (libraries
  core
  decimal
  workflow_engine
  execution_management
  execution_management_external_integration_events
  execution_management_external_view_models
  execution_management_commands
  execution_management_ports
  execution_management_persistence
  gherkin_edsl
  alcotest))
