(library
 (name correlation_id)
 (public_name trading.correlation_id)
 (libraries uuidm))

; Why3 deductive verification of the correlation_id invariants.
(rule
 (alias why3)
 (deps
  (glob_files *.mlw))
 (action
  (bash "set -eu
for f in %{deps}; do
  case \"$f\" in ../*) continue ;; esac
  why3 prove -L . -P alt-ergo \"$f\" >/dev/null 2>&1 \\
    || why3 prove -L . -P z3 \"$f\" >/dev/null
done")))

(alias
 (name runtest)
 (deps (alias why3)))
