(library
 (name account_view_models)
 (public_name trading.account.view_models)
 (libraries yojson ppx_yojson_conv_lib atdgen-runtime
            core decimal account)
 (preprocess (pps ppx_yojson_conv))
 (flags (:standard -open Ppx_yojson_conv_lib.Yojson_conv.Primitives)))

(rule
 (deps
  (:atd %{project_root}/shared/contracts/account/view_models/instrument_view_model.atd))
 (targets instrument_view_model_t.ml instrument_view_model_t.mli
          instrument_view_model_j.ml instrument_view_model_j.mli)
 (action
  (progn
   (run atdgen -t -o instrument_view_model %{atd})
   (run atdgen -j -o instrument_view_model %{atd}))))

(rule
 (deps
  (:atd %{project_root}/shared/contracts/account/view_models/position_view_model.atd))
 (targets position_view_model_t.ml position_view_model_t.mli
          position_view_model_j.ml position_view_model_j.mli)
 (action
  (progn
   (run atdgen -t -o position_view_model %{atd})
   (run atdgen -j -o position_view_model %{atd}))))

(rule
 (deps
  (:atd %{project_root}/shared/contracts/account/view_models/reservation_view_model.atd))
 (targets reservation_view_model_t.ml reservation_view_model_t.mli
          reservation_view_model_j.ml reservation_view_model_j.mli)
 (action
  (progn
   (run atdgen -t -o reservation_view_model %{atd})
   (run atdgen -j -o reservation_view_model %{atd}))))

(rule
 (deps
  (:atd %{project_root}/shared/contracts/account/view_models/portfolio_view_model.atd))
 (targets portfolio_view_model_t.ml portfolio_view_model_t.mli
          portfolio_view_model_j.ml portfolio_view_model_j.mli)
 (action
  (progn
   (run atdgen -t -o portfolio_view_model %{atd})
   (run atdgen -j -o portfolio_view_model %{atd}))))
