(library
 (name paper_broker_view_models)
 (public_name trading.paper_broker.view_models)
 (libraries yojson ppx_yojson_conv_lib atdgen-runtime
            core decimal datetime paper_broker)
 (preprocess (pps ppx_yojson_conv))
 (flags (:standard -open Ppx_yojson_conv_lib.Yojson_conv.Primitives)))

(rule
 (deps
  (:atd %{project_root}/shared/contracts/paper_broker/view_models/instrument_view_model.atd))
 (targets instrument_view_model_t.ml instrument_view_model_t.mli
          instrument_view_model_j.ml instrument_view_model_j.mli)
 (action
  (progn
   (run atdgen -t -o instrument_view_model %{atd})
   (run atdgen -j -o instrument_view_model %{atd}))))

(rule
 (deps
  (:atd %{project_root}/shared/contracts/paper_broker/view_models/order_kind_view_model.atd))
 (targets order_kind_view_model_t.ml order_kind_view_model_t.mli
          order_kind_view_model_j.ml order_kind_view_model_j.mli)
 (action
  (progn
   (run atdgen -t -o order_kind_view_model %{atd})
   (run atdgen -j -o order_kind_view_model %{atd}))))

(rule
 (deps
  (:atd %{project_root}/shared/contracts/paper_broker/view_models/candle_view_model.atd))
 (targets candle_view_model_t.ml candle_view_model_t.mli
          candle_view_model_j.ml candle_view_model_j.mli)
 (action
  (progn
   (run atdgen -t -o candle_view_model %{atd})
   (run atdgen -j -o candle_view_model %{atd}))))
