(library
 (name portfolio_management_integration_events)
 (public_name trading.portfolio_management.integration_events)
 (libraries
  yojson
  ppx_yojson_conv_lib
  atdgen-runtime
  core
  correlation_id
  decimal
  datetime
  portfolio_management
  portfolio_management_view_models)
 (preprocess (pps ppx_yojson_conv))
 (flags
  (:standard
   -open Ppx_yojson_conv_lib.Yojson_conv.Primitives
   -open Portfolio_management_view_models)))

(rule
 (deps
  (:atd %{project_root}/shared/contracts/portfolio_management/integration_events/target_portfolio_updated_integration_event.atd))
 (targets target_portfolio_updated_integration_event_t.ml
          target_portfolio_updated_integration_event_t.mli
          target_portfolio_updated_integration_event_j.ml
          target_portfolio_updated_integration_event_j.mli)
 (action
  (progn
   (run atdgen -t -o target_portfolio_updated_integration_event %{atd})
   (run atdgen -j -o target_portfolio_updated_integration_event %{atd}))))

(rule
 (deps
  (:atd %{project_root}/shared/contracts/portfolio_management/integration_events/trade_intents_planned_integration_event.atd))
 (targets trade_intents_planned_integration_event_t.ml
          trade_intents_planned_integration_event_t.mli
          trade_intents_planned_integration_event_j.ml
          trade_intents_planned_integration_event_j.mli)
 (action
  (progn
   (run atdgen -t -o trade_intents_planned_integration_event %{atd})
   (run atdgen -j -o trade_intents_planned_integration_event %{atd}))))
