(library
 (name pre_trade_risk_integration_events)
 (public_name trading.pre_trade_risk.integration_events)
 (libraries
  yojson
  ppx_yojson_conv_lib
  atdgen-runtime
  core
  decimal
  datetime
  pre_trade_risk
  pre_trade_risk_view_models)
 (preprocess
  (pps ppx_yojson_conv))
 (flags
  (:standard
   -open Ppx_yojson_conv_lib.Yojson_conv.Primitives
   -open Pre_trade_risk_view_models)))

(rule
 (deps
  (:atd %{project_root}/shared/contracts/pre_trade_risk/integration_events/trade_intent_approved_integration_event.atd))
 (targets trade_intent_approved_integration_event_t.ml
          trade_intent_approved_integration_event_t.mli
          trade_intent_approved_integration_event_j.ml
          trade_intent_approved_integration_event_j.mli)
 (action
  (progn
   (run atdgen -t -o trade_intent_approved_integration_event %{atd})
   (run atdgen -j -o trade_intent_approved_integration_event %{atd}))))

(rule
 (deps
  (:atd %{project_root}/shared/contracts/pre_trade_risk/integration_events/trade_intent_rejected_integration_event.atd))
 (targets trade_intent_rejected_integration_event_t.ml
          trade_intent_rejected_integration_event_t.mli
          trade_intent_rejected_integration_event_j.ml
          trade_intent_rejected_integration_event_j.mli)
 (action
  (progn
   (run atdgen -t -o trade_intent_rejected_integration_event %{atd})
   (run atdgen -j -o trade_intent_rejected_integration_event %{atd}))))

(rule
 (deps
  (:atd %{project_root}/shared/contracts/pre_trade_risk/integration_events/kill_switch_tripped_integration_event.atd))
 (targets kill_switch_tripped_integration_event_t.ml
          kill_switch_tripped_integration_event_t.mli
          kill_switch_tripped_integration_event_j.ml
          kill_switch_tripped_integration_event_j.mli)
 (action
  (progn
   (run atdgen -t -o kill_switch_tripped_integration_event %{atd})
   (run atdgen -j -o kill_switch_tripped_integration_event %{atd}))))

(rule
 (deps
  (:atd %{project_root}/shared/contracts/pre_trade_risk/integration_events/trade_submission_blocked_integration_event.atd))
 (targets trade_submission_blocked_integration_event_t.ml
          trade_submission_blocked_integration_event_t.mli
          trade_submission_blocked_integration_event_j.ml
          trade_submission_blocked_integration_event_j.mli)
 (action
  (progn
   (run atdgen -t -o trade_submission_blocked_integration_event %{atd})
   (run atdgen -j -o trade_submission_blocked_integration_event %{atd}))))
