(library
 (name account_external_integration_events)
 (public_name trading.account.acl.external_integration_events)
 (libraries
  yojson
  ppx_yojson_conv_lib
  atdgen-runtime
  core
  decimal
  account_external_view_models
  account_commands)
 (preprocess
  (pps ppx_yojson_conv))
 (flags
  (:standard
   -open Ppx_yojson_conv_lib.Yojson_conv.Primitives
   -open Account_external_view_models)))

; Broker IE atdgen rules removed in step 3 — Account no longer
; subscribes to broker IEs. All cross-BC interactions with
; Account come through the order_management saga (per ADR 0022).
