(library
 (name bcs)
 (public_name trading.bcs)
 (libraries core broker_domain decimal broker broker_view_models http_transport broker_persistence websocket log acl_common datetime
            eio eio.unix yojson uri uuidm
            tls x509)
 (flags (:standard -open Broker_domain -open Broker_view_models)))
