(library
 (name strategy_external_integration_events)
 (public_name trading.strategy.acl.external_integration_events)
 (libraries
  yojson
  ppx_yojson_conv_lib
  atdgen-runtime
  strategy_external_view_models
  common
  core
  decimal
  datetime
  eio
  pipe)
 (preprocess
  (pps ppx_yojson_conv))
 (flags
  (:standard
   -open Ppx_yojson_conv_lib.Yojson_conv.Primitives
   -open Strategy_external_view_models)))

(rule
 (deps
  (:atd %{project_root}/shared/contracts/broker/integration_events/bar_updated_integration_event.atd))
 (targets bar_updated_integration_event_t.ml bar_updated_integration_event_t.mli
          bar_updated_integration_event_j.ml bar_updated_integration_event_j.mli)
 (action
  (progn
   (run atdgen -t -o bar_updated_integration_event %{atd})
   (run atdgen -j -o bar_updated_integration_event %{atd}))))

(rule
 (deps
  (:atd %{project_root}/shared/contracts/order_flow/integration_events/footprint_completed_integration_event.atd))
 (targets footprint_completed_integration_event_t.ml
          footprint_completed_integration_event_t.mli
          footprint_completed_integration_event_j.ml
          footprint_completed_integration_event_j.mli)
 (action
  (progn
   (run atdgen -t -o footprint_completed_integration_event %{atd})
   (run atdgen -j -o footprint_completed_integration_event %{atd}))))
